--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "*",
         "pragmarx/google2fa": "^8.0",
-        "spatie/laravel-backup": "*"
+        "spatie/laravel-backup": "^9.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
